--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
         <nav>
             <ul>
                 <li><a href = "index.html">Home</a></li>
-                <li>Pets</li>
-                <li>Recipes</li>
-                <li>Travel</li>
+                <li><a href = "pets.html">Pets</li>
+                <li><a href = "recipes.html">Recipes</li>
+                <li><a href = "travel.html">Travel</li>
             </ul>
         </nav>
         <h1>Week Two discussion</h1>
@@ -21,7 +21,7 @@
     </header>
     <main>
         <div>
-            <p>Welcome to [insert website name], your go-to destination for all things pets, recipes, and travel! Explore a world of captivating content where we cater to your love for furry companions, culinary delights, and globetrotting adventures. </p>
+            <p>Welcome to Pets, your go-to destination for all things pets, recipes, and travel! Explore a world of captivating content where we cater to your love for furry companions, culinary delights, and globetrotting adventures. </p>
 
         </div>
 
