--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Pets</title>
 </head>
 <body>
-    <a href = "#main">Skip to Main Content</a>
+    <a href = "main">Skip to Main Content</a>
     <header>
         <nav>
             <ul>
@@ -19,7 +19,7 @@
         <h1>Week Two discussion</h1>
 
     </header>
-    <main id="main">
+    <main>
         <div>
             <p>Welcome to Pets, your go-to destination for all things pets, recipes, and travel! Explore a world of captivating content where we cater to your love for furry companions, culinary delights, and globetrotting adventures. </p>
 
