--- a/pets.html
+++ b/pets.html
@@ -6,7 +6,7 @@
     <title>Pets</title>
 </head>
 <body>
-    <a href = "">Skip to Main Content</a>
+    <a href = "main">Skip to Main Content</a>
     <main>
         <h1>Pets</h1>
         <div>
