--- a/recipes.html
+++ b/recipes.html
@@ -1,1 +1,63 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Recipes</title>
+</head>
+<body>
+    <a href = "main">Skip to Main Content</a>
+    <header>
+        <nav>
+            <ul>
+                <li><a href = "index.html">Home</a></li>
+                <li><a href = "pets.html">Pets</li>
+                <li><a href = "recipes.html">Recipes</li>
+                <li><a href = "travel.html">Travel</li>
+            </ul>
+        </nav>
+        <h1>Recipes</h1>
 
+    </header>
+    <main>
+        <div>
+            <h2>Double Chocolate Cookies</h2>
+                <p>Origin: Michigan</p><br>
+                <p>Source: Family Recipe</p><br>
+                <P>Category: Dessert</P><br>
+              <img src="images/double_chocolate_cookies.png" width = "400" alt="double chocolate cookies">
+              <p>My daughter learned to make these cookies at a baking camp at Zingermanns and has tweaked the recipe to fit the taste buds of her siblings.  They are extremely sugary so the salt helps to balance it.  Note, these cookies are best eaten very quickly.</p>
+              <h3>Recipe Ingredients</h3>
+                <ul>
+                  <li>Unsalted butter</li>
+                  <li>Granulated Sugar </li>
+                  <li>Packed light or dark brown sugar</li>
+                  <li>Large egg</li>
+                  <li>Pure vanilla extract</li>
+                  <li>Semi-sweet chocolate chunks (melted)</li>
+                  <li>All-purpose flour </li>
+                  <li>Natural unsweetened cocoa powder</li>
+                  <li>Baking soda</li>
+                  <li>Salt</li>
+                  <li>Semi-sweet chocolate chunks</li>
+                </ul>
+               <h3>Recipe Steps</h3>
+                <ul>
+                  <li>In a mixing bowl cream together the butter, granulated sugar, and brown sugar</li>
+                  <li>Add the egg and vanilla extract and beat well</li>
+                  <li>Add the melted chocolate</li>
+                  <li>In a separate bowl combine the flour, baking soda, cocoa powder and salt</li>
+                  <li>Combine the wet and dry ingredients</li>
+                  <li>Add the unmelted chocolate chunks. </li>
+                  <li>Form 15 cookies and place on a baking sheet.</li>
+                  <li>Cooke for 12 to 13 minutes at 350 degrees.</li>
+                </ul>
+          <h3>Additional Food images</h3>
+            <p>A small pile of chocolate chips</p>
+            <img src="images/double_chocolate_chips.png" width = "400" alt="double chocolate chips">
+        </div>
+
+    </main>
+    
+</body>
+</html>
