change pets and travel file

--- a/travel.html
+++ b/travel.html
@@ -1,1 +1,23 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Travel Page</title>
+</head>
+<body>
+    <a href = "">Skip to Main Content</a>
+    <main>
+        <h1>Travel</h1>
+        <div>
+            <h2>Yellowstone National Park</h2>
 
+            <h3>Photo Gallery</h3>
+            <img src="images/yellowstone_travertine.JPG" width ="200" alt = "A large mound of multi-colored travertine.">
+            <p>Mammoth Hot Springs has a number of actively forming Travertine terraces.</p>
+
+            <img src="images/yellowstone_sunset.jpg"  width ="200" alt="Sunset over mountains with some charred trees in the foregroun.">
+            <p>The drive to Lamar Valley requires some dangerous roads.  But the result is amazing sunset views.</p>
+        </div>
+</body>
+</html>
