--- a/recipes.html
+++ b/recipes.html
@@ -11,9 +11,9 @@
         <nav>
             <ul>
                 <li><a href = "index.html">Home</a></li>
-                <li><a href = "pets.html">Pets</li>
-                <li><a href = "recipes.html">Recipes</li>
-                <li><a href = "travel.html">Travel</li>
+                <li><a href = "pets.html">Pets</a></li>
+                <li><a href = "recipes.html">Recipes</a></li>
+                <li><a href = "travel.html">Travel</a></li>
             </ul>
         </nav>
         <h1>Recipes</h1>
