change Fitz.jpeg image name

--- a/pets.html
+++ b/pets.html
@@ -36,7 +36,7 @@
 
         <div>
             <h2>Fitz</h2>
-            <img src="images/fitz.jpg" width = "400" alt="Boston terrier watching a tennis ball at the table.">
+            <img src="images/Fitz.jpeg" width = "400" alt="Boston terrier watching a tennis ball at the table.">
 
             <p>Loves chasings tennis balls, chipmunks, squirrels, and birds. Often found sitting by the fire in wintertime, and in sun patches when available. He's energetic, mischievous, and easily bored. He loves people and gets grumpy if left without a lap too long. </p>
             <p>Loves barking up trees, running around on the lawn, and digging in the dirt looking for moles. He especially likes getting treats and whines when he comes inside and doesn't get a snack. </p>
